MDEV-4553 - Fixes for compilation under NetBSD.